# reaper-regions

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: lib.rs  main.rs
src/wavtag/: mod.rs  riff.rs
src/wavtag/chunks/: inst.rs  mod.rs  smpl.rs
tests/: test_cli_goldens.rs
tests/goldens/: 3-markers-3-regions-overlapping_stripped.csv  3-markers-3-regions-overlapping_stripped.human  3-markers-3-regions-overlapping_stripped.json  3-markers-3-regions-overlapping_stripped.psv  3-markers-3-regions-overlapping_stripped.tsv  marker-region-not-only-starting-with-num_stripped.csv  marker-region-not-only-starting-with-num_stripped.human  marker-region-not-only-starting-with-num_stripped.json  marker-region-not-only-starting-with-num_stripped.psv  marker-region-not-only-starting-with-num_stripped.tsv  marker-region-starting-with-num_stripped.csv  marker-region-starting-with-num_stripped.human  marker-region-starting-with-num_stripped.json  marker-region-starting-with-num_stripped.psv  marker-region-starting-with-num_stripped.tsv  marker-region_stripped.csv  marker-region_stripped.human  marker-region_stripped.json  marker-region_stripped.psv  marker-region_stripped.tsv  no-markers-or-regions_stripped.csv  no-markers-or-regions_stripped.human  no-markers-or-regions_stripped.json  no-markers-or-regions_stripped.psv  no-markers-or-regions_stripped.tsv  one-marker-only_stripped.csv  one-marker-only_stripped.human  one-marker-only_stripped.json  one-marker-only_stripped.psv  one-marker-only_stripped.tsv  one-region-only_stripped.csv  one-region-only_stripped.human  one-region-only_stripped.json  one-region-only_stripped.psv  one-region-only_stripped.tsv  without-bwf-bext-chunk_stripped.csv  without-bwf-bext-chunk_stripped.human  without-bwf-bext-chunk_stripped.json  without-bwf-bext-chunk_stripped.psv  without-bwf-bext-chunk_stripped.tsv
tools/strip/: Cargo.toml
tools/strip/src/: main.rs
wavtag/src/: lib.rs
