[package]
name = "reaper-regions"
version = "0.1.0"
description = "Read REAPER markers and regions from WAV files"
edition = "2024"

[dependencies]
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
csv = "1"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27.2", features = ["derive"] }
wherror = "2"
